# uav_testing

baylands/: CMakeLists.txt  package.xml
baylands/launch/: baylands.launch.py
ksql_airport/: CMakeLists.txt  package.xml
ksql_airport/launch/: ksql.launch.py
mcmillan_airfield/: CMakeLists.txt  package.xml
mcmillan_airfield/launch/: drone_mcmillan.launch  mcmillan.launch  mcmillan.launch.py
mcmillan_airfield/worlds/: bricks_oak.world  bricks_oak_1.world  mcmillan.world
sand_island/: CMakeLists.txt  package.xml
sand_island/launch/: sand_island.launch.py
yosemite_valley/: CMakeLists.txt  package.xml
yosemite_valley/launch/: drone_yosemite.launch  yosemite.launch.py
yosemite_valley/worlds/: empty_sky.world  street.world
